# ziti-sdk-c

./: .clang-format  .gitignore  .gitmodules  .travis.yml  BUILD.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTORS  Doxyfile  Jenkinsfile  LICENSE  OIDC_AUTH_FIXES.md  README.md  README.rst  build.variants  building.md  git-modules  git.cmake  make_publish_spec.sh  msvc-2017-build.bat  msvc-build.bat  publish.sh  release-notes.md  uber-build.sh  vcpkg-configuration.json  vcpkg.json  version.txt  ziti.pc.in
.github/: dependabot.yml  release-drafter.yml
.github/workflows/: build-release.yml  cmake.yml  codeql.yml  draft-release.yml  integration-test.yml  linters.yml  mattermost-ziti-webhook.yml
cmake/: check-headers.cmake  variables.cmake  version.cmake
doc/: building.md  overview.md  toc.yml
docs/: README_8md.html  annotated.html  annotated_dup.js  buffer_8c.html  buffer_8c.js  buffer_8h.html  buffer_8h.js  buffer_8h_source.html  building.html  building_8md.html  channel_8c.html  channel_8c.js  classes.html  config_8c.html  config_8c.js  connect_8c.html  connect_8c.js  controller_8c.html  controller_8c.js  controller_8h.html  controller_8h.js  controller_8h_source.html  dir_09e761304027c904456130627fd4dcf5.html  dir_09e761304027c904456130627fd4dcf5.js  dir_478c7cfeefbbf1ec7a045dba74fbc00e.html  dir_478c7cfeefbbf1ec7a045dba74fbc00e.js  dir_e3d620c6b6fdb93ed3bc6186215bde2e.html  dir_e3d620c6b6fdb93ed3bc6186215bde2e.js  dir_e68e8157741866f444e17edd764ebbae.html  endian__internal_8h.html  endian__internal_8h_source.html  errors_8c.html  errors_8c.js  errors_8h.html  errors_8h.js  errors_8h_source.html  files.html  files_dup.js  functions.html  functions_func.html  (+91 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  defines_7.js  defines_8.js  defines_9.js  (+68 more)
inc_internal/: auth_method.h  auth_queries.h  authenticators.h  buffer.h  connect.h  credentials.h  crypto.h  deadline.h  edge_protocol.h  ext_oidc.h  ext_oidc_pages.h  internal_model.h  jsmn.h  jwt.h  message.h  metrics.h  model.h  model_impl.h  oidc.h  old_model_impl.h  pool.h  posture.h  stickiness.h  tls.h  utils.h  ziti_ctrl.h  ziti_enroll.h  ziti_model.h  zt_internal.h
includes/nf/: errors.h  model_support.h  ziti.h  ziti_link.h  ziti_log.h  ziti_model.h  ziti_src.h
includes/ziti/: enroll.h  enums.h  error_defs.h  errors.h  externs.h  model_collections.h  model_map.h  model_support.h  socket.h  types.h  ziti.h  ziti_buffer.h  ziti_events.h  ziti_log.h  ziti_model.h  ziti_src.h  zitilib.h
programs/: CMakeLists.txt
programs/auth-samples/: CMakeLists.txt  jwt_auth.cpp  ziti_mfa.cpp
programs/foo/: CMakeLists.txt
programs/host-proxy/: CMakeLists.txt  host-proxy.c
programs/mfa_tester/: CMakeLists.txt  ziti_mfa.cpp
programs/nwp/: CMakeLists.txt  nwp.c
programs/sample-bridge/: CMakeLists.txt  ziti-curl.c  ziti-fd-client.c  ziti-http-get.c  ziti-ncat.c
programs/sample-host/: CMakeLists.txt  sample-host.c
programs/sample_enroll/: CMakeLists.txt  sample_enroll.c
programs/sample_http_link/: CMakeLists.txt  README.md  sample_http_link.c
programs/sample_wttr/: CMakeLists.txt  sample_wttr.c
programs/wzcat/: CMakeLists.txt  ziti_ws.c
programs/ziti-prox-c/: CMakeLists.txt  http_proxy.c  main.cpp  proxy.c  proxy.h
programs/zitilib-samples/: CMakeLists.txt  common.h  server.c  ziti-http-get.c
programs/zping/: CMakeLists.txt  README.md  zping.c
tests/: CMakeLists.txt  all_tests.cpp  buffer_tests.cpp  catch2_includes.hpp  collections_tests.cpp  ctrl_tests.cpp  e2ee_tests.cpp  enum_tests.cpp  find-softhsm-lib.sh  init-test-data.sh  map_tests.cpp  message_tests.cpp  model_tests.cpp  pkcs7_tests.cpp  pool_tests.cpp  test_jwt.cpp  test_key.pem  test_keys.cpp  test_metrics.cpp  test_model.cpp  test_ziti_model.cpp  util_tests.cpp  ziti-tester.c  ziti_src_tests.cpp  zitilib-tests.cpp  zl_sockets_tests.cpp
tests/integ/: CMakeLists.txt  MANUAL_ENROLLTOCERT_TEST.md  bootstrap.exp  conftest.py  connect_tests.cpp  ctrl_tests.cpp  echo-server.c  enroll_mode_tests.cpp  enroll_test_helpers.h  enroll_tests.cpp  enroll_token_tests.cpp  env.in  fixtures.h  integ-test.exp  legacy-auth.cpp  main.cpp  oidc-tests.cpp  pytest.toml  requirements.txt  setup-keycloak.sh  test-data.h.in  test_auth.py  test_integ.py  zitilib_tests.cpp  zl_connect_tests.cpp
toolchains/: FreeBSD-x64.cmake  Linux-arm.cmake  Linux-arm64.cmake  Windows-ARM64-msvc.cmake  Windows-x86-msvc.cmake  iOS-arm64.cmake  iOS-x86_64.cmake  macOS-arm64.cmake
vcpkg-overlays/common/protobuf-c/: README.md  portfile.cmake  protobuf-dep.patch  vcpkg.json
vcpkg-overlays/linux/openssl/: vcpkg.json
vcpkg-overlays/linux/protobuf-c/: vcpkg.json
vcpkg-overlays/macos/json-c/: README.md  disable-duplocale.patch  portfile.cmake
vcpkg-overlays/protobuf/: vcpkg.json
vcpkg-overlays/protobuf-c/: fix-dependency-protobuf.patch  portfile.cmake  vcpkg.json
windows/: CMakeLists.txt
windows/dotnet_dll/: CMakeLists.txt  csharp_utils.c  zitidll.cpp
windows/dotnet_dll/includes/: dotnet_dll.h
zitify/: CMakeLists.txt  README.md  zitify  zitify.cpp
